<resources>
    <string name="app_name">MaketFastPallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Добавленные строковые ресурсы   -->
    <string name="header_text">Список документов</string>
    <string name="document_header_right">П 1%$s М %2$s К %3$s</string>
    <string name="header_item">1%$s</string>
    <string name="header_additional">Дополнительная информация\nВозможно в две строки
    </string>
    <string name="main_menu_text">Меню (1)</string>
    <string name="box_date">Дата: %1$s</string>
    <string name="box_barcode">Штрихкод: %1$s</string>
    <string name="ed_weight">Вес</string>
    <string name="ed_place">Место</string>
    <string name="tv_buffer">Буффер</string>






</resources>
